@startuml catalog
'==============================================================
' Bounded Context: Catalog
' Capas presentes: interfaces / domain / infrastructure
' (no tiene capa application: el controller usa el repositorio)
'==============================================================
title Bounded Context - Catalog

skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
left to right direction

skinparam package {
  BackgroundColor<<interfaces>>     #FDF2E9
  BackgroundColor<<domain>>         #E9F7EF
  BackgroundColor<<infrastructure>> #F4ECF7
}

' =========================== INTERFACES ===========================
package "interfaces.rest" <<interfaces>> {
  class ProviderRatingsController
  package "resources" {
    class ProviderRatingResource <<record>>
  }
}

' =========================== DOMAIN ===========================
package "domain" <<domain>> {
  package "model.aggregates" {
    class ProviderRating {
      - Long id
      - Long companyId
      - Long providerId
      - Integer rating
      + changeRating(Integer)
    }
  }
  package "repositories" {
    interface ProviderRatingRepository
  }
}

' =========================== INFRASTRUCTURE ===========================
package "infrastructure" <<infrastructure>> {
  package "persistence.jpa.adapters" {
    class ProviderRatingRepositoryImpl
  }
  package "persistence.jpa.entities" {
    class ProviderRatingPersistenceEntity <<entity>>
  }
  package "persistence.jpa.repositories" {
    interface ProviderRatingPersistenceRepository
  }
}

' =========================== RELACIONES ===========================
ProviderRatingsController ..> ProviderRatingRepository
ProviderRatingsController ..> ProviderRatingResource

ProviderRatingRepositoryImpl ..|> ProviderRatingRepository
ProviderRatingRepositoryImpl ..> ProviderRatingPersistenceRepository
ProviderRatingRepositoryImpl ..> ProviderRatingPersistenceEntity
ProviderRatingRepositoryImpl ..> ProviderRating
@enduml
